--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply plugin: 'groovy'
 buildscript {
     repositories {
         jcenter()
